--- a/hideshare/hideshare.css
+++ b/hideshare/hideshare.css
@@ -25,7 +25,30 @@
 .hideshare-wrap span {
   display: none;
 }
-
+/*
+  Example CSS
+*/
+body {
+  background: #232323;
+  font-family: sans-serif;
+  font-size: 14px;
+  padding: 5em 0 5em;
+  text-align: center;
+}
+img {
+  margin: 0 auto 5em;
+  width: 200px;
+  height: auto;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #444;
+}
+a {
+  text-decoration: none;
+}
 .share {
   display: block;
   width: 200px;
