--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,9 +1,12 @@
-* {
+head, body {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
+
 }
 
 .main-container {
+  height: 90vh;
 }
 
 .header {
@@ -11,7 +14,9 @@
   background-color: #FF8915;
   display: flex;
   flex-direction: column;
-  height: 11rem;
+  justify-content: space-around;
+  align-items: center;
+  height: 13rem;
 }
 
 .word-logo {
