--- a/assets/hideshare/hideshare.css
+++ b/assets/hideshare/hideshare.css
@@ -6,8 +6,8 @@
   text-align: center;
   position: relative;
 }
-.hideshare-wrap .hideshare-list {
-  position: absolute;
+.hideshare-wrap, .hideshare-list {
+  /* position: absolute; */
   top: 0;
   left: 0;
   right: 0;
@@ -25,40 +25,13 @@
 .hideshare-wrap span {
   display: none;
 }
-/*
-  Example CSS
-*/
-body {
-  background: #232323;
-  font-family: sans-serif;
-  font-size: 14px;
-  padding: 5em 0 5em;
-  text-align: center;
-}
-img {
-  margin: 0 auto 5em;
-  width: 200px;
-  height: auto;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
-  border: 1px solid #444;
-}
-a {
-  text-decoration: none;
-}
+
 .share {
   display: block;
   width: 200px;
   margin: 0 auto;
   background: #dedede;
   color: #232323;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
   border-radius: 5px;
   padding: 1em 0;
   border: 1px solid #444;
